# josiah

./: .gitignore  CLAUDE.md  LICENSE  README.md  Simmulator-meridian.ipynb  app.py  mmm_data_daily.csv  mmm_data_weekly.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sim.R  sim.ipynb  weekly.csv  weekly2_monday_aligned.csv
.ipynb_checkpoints/: Simmulator-meridian-checkpoint.ipynb
demantiq/: __init__.py
demantiq/calibration/: __init__.py  empirical_distributions.py  public_data_adapter.py  realism_validator.py
demantiq/config/: __init__.py  baseline_config.py  channel_config.py  competition_config.py  distribution_config.py  endogeneity_config.py  interaction_config.py  macro_config.py  noise_config.py  pricing_config.py  simulation_config.py
demantiq/core/: __init__.py  demand_kernel.py  endogeneity_layer.py  noise_model.py
demantiq/evaluation/: __init__.py  capability_surface.py  contribution_accuracy.py  interaction_detection.py  model_comparison.py  optimization_quality.py  parameter_recovery.py  roas_accuracy.py
demantiq/generators/: __init__.py  baseline_generator.py  competition_generator.py  distribution_generator.py  macro_generator.py  pricing_engine.py  spend_generator.py
demantiq/ground_truth/: __init__.py  contributions.py  counterfactuals.py  elasticities.py  margin_attribution.py  roas_calculator.py
demantiq/orchestration/: __init__.py  monte_carlo.py  parallel_runner.py  serializer.py  training_format.py  training_pipeline.py
demantiq/scenarios/: __init__.py  difficulty_scorer.py  (+2 more)
docs/: README.md  prd.md
josiah/: __init__.py  export.py  generator.py  scenario.py  visualization.py
pages/: 1_Scenario_Builder.py  2_Generate_Preview.py  3_Export.py  4_Demantiq_Config.py  5_Demantiq_Generate.py  6_Demantiq_Scenarios.py  7_Demantiq_Monte_Carlo.py  8_Demantiq_Validation.py
revenue_simulator/: README.md  requirements.txt  setup.py
tests/: test_simulator.py
(+80 files in other folders)
